--- a/index.html
+++ b/index.html
@@ -107,6 +107,8 @@
 <option value="moonlight">Moonlight</option>
 <option value="lava">Lava</option>
 <option value="frost">Frost</option>
+<option value="embroidery">Embroidery Satin Patch</option>
+
 
         </select>
       </div>
