--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 <option value="moonlight">Moonlight</option>
 <option value="lava">Lava</option>
 <option value="frost">Frost</option>
-<option value="embroidery">Embroidery Satin Patch</option>
+<option value="embroiderySatin">Embroidery Satin Patch</option>
 
 
         </select>
