--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 <option value="crayon">Crayon</option>
 
 
-<option value="embroiderySatin">Embroidery Satin Patch</option>
+<option value="Towel">Towel</option>
 
 
         </select>
