--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
 
 <option value="pencil">Pencil</option>
 
-<option value="pastel">Pastel</option>
+<option value="embroidery_satin">Embroidery Satin</option>
+
 
 <option value="crayon">Crayon</option>
 
