--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
          
 <option value="paper">Paper</option>
 
-<option value="pencil">Pencil</option>
+<option value="game_block">Game Block</option>
+
 
 <option value="embroidery_satin">Embroidery Satin</option>
 
