--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
         <label for="effect-style">Select effect</label>
         <select id="effect-style">
          
-<option value="paper">Paper</option>
+<option value="aluminium_emboss">Aluminium Emboss (DIY)</option>
+
 
 <option value="game_block">Game Block</option>
 
