--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
         <select id="effect-style">
          
 <!-- <option value="aluminium_emboss">Aluminium Emboss (DIY)</option> --> 
+<option value="draw_outline">Drawing Outline (Coloring Page)</option>
 
 
 <option value="game_block">Game Block</option>
