--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
          
 <!-- <option value="aluminium_emboss">Aluminium Emboss (DIY)</option> --> 
 <option value="draw_outline">Drawing Outline (Coloring Page)</option>
+<option value="clean_line_art">Clean Line Art (Coloring Book)</option>
 
 
 <option value="game_block">Game Block</option>
