--- a/index.html
+++ b/index.html
@@ -56,8 +56,9 @@
         <select id="effect-style">
          
 <!-- <option value="aluminium_emboss">Aluminium Emboss (DIY)</option> --> 
-<option value="draw_outline">Drawing Outline (Coloring Page)</option>
-<option value="clean_line_art">Clean Line Art (Coloring Book)</option>
+<option value="colored_pencil">Colored Pencil Effect</option>
+
+<option value="clean_line_art">Black Pencil (Coloring Book)</option>
 
 
 <option value="game_block">Game Block</option>
@@ -66,7 +67,7 @@
 <option value="embroidery_satin">Embroidery Satin</option>
 
 
-<option value="crayon">Crayon</option>
+<option value="crayon">Water reflection effect</option>
 
 
 <option value="Towel">Towel</option>
