--- a/index.html
+++ b/index.html
@@ -56,6 +56,9 @@
         <select id="effect-style">
          
 <!-- <option value="aluminium_emboss">Aluminium Emboss (DIY)</option> --> 
+<option value="dot_art">Pointillism</option>
+
+          
 <option value="colored_pencil">Colored Pencil Effect</option>
 
 <option value="clean_line_art">Black Pencil (Coloring Book)</option>
