--- a/index.html
+++ b/index.html
@@ -61,6 +61,9 @@
           
 <option value="colored_pencil">Colored Pencil Effect</option>
 
+<option value="cotton">Cotton Effect</option>
+
+
 <option value="clean_line_art">Black Pencil (Coloring Book)</option>
 
 
