--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@
           
 <option value="colored_pencil">Colored Pencil Effect</option>
 
-<option value="cotton">Cotton Effect</option>
+<option value="crocodile_print">Crocodile Print</option>
+
 
 
 <option value="clean_line_art">Black Pencil (Coloring Book)</option>
