--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@
           
 <option value="colored_pencil">Colored Pencil Effect</option>
 
-<option value="chocolate_embossed">Chocolate Embossed</option>
+<option value="chocolate_deboss">Chocolate Deboss</option>
+
 
 
 
