--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           
 <option value="colored_pencil">Colored Pencil Effect</option>
 
-<option value="line_art">Line Art </option>
+<option value="vertical_pencil">Vertical Pencil Lines</option>
 
 
 
