--- a/index.html
+++ b/index.html
@@ -102,6 +102,24 @@
 
   </main>
 
+ <footer class="maacat-footer">
+    <div class="footer-inner">
+      <div class="footer-copy">
+        © 2026 MAACAT · 
+        <a href="https://www.maacat.cc" class="footer-site">www.maacat.cc</a>
+      </div>
+
+      <div class="footer-links">
+        <a href="https://www.maacat.cc/p/cookie-policy.html">Cookie Policy</a>
+        <a href="https://www.maacat.cc/p/refund-policy.html">Refund Policy</a>
+        <a href="https://www.maacat.cc/p/privacy-policy.html">Privacy Policy</a>
+        <a href="https://www.maacat.cc/p/terms-conditions.html">Terms & Conditions</a>
+      </div>
+    </div>
+  </footer>
+
+  
+        
   <script src="script.js"></script>
 </body>
 </html>
