--- a/index.html
+++ b/index.html
@@ -110,6 +110,9 @@
       </div>
 
       <div class="footer-links">
+        <a href="about.html">About</a>
+  <a href="updates.html">Updates</a>
+  <span>|</span>
         <a href="https://www.maacat.cc/p/cookie-policy.html">Cookie Policy</a>
         <a href="https://www.maacat.cc/p/refund-policy.html">Refund Policy</a>
         <a href="https://www.maacat.cc/p/privacy-policy.html">Privacy Policy</a>
